--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 appId=c4efbbca-0eac-4639-9291-3ad44804c1a7
-scopes=files.readwrite,offline_access
+scopes=files.read
 redirectUri=http://localhost:8080
+clentSecret=A9z7Q~~Pmfhvk5eBME4lEicicqhh.M2ltPgnj
